--- a/mainheader.css
+++ b/mainheader.css
@@ -4,14 +4,17 @@ html{
 body{
     margin: 0; /* 이 처리를 해놔야 화면에 꽉참! */
 }
+
+/* 제일 상단 메뉴바 */
 #header { /* 가장 바깥 div */
-    /* position: fixed; */
+    z-index : 1;
     margin: 0 auto;
-    background-color: rgba(255, 255, 255, 0.5);
-    /* opacityr도 투명도 조절인데, div에 포함되는 모든애들이 투명해져서 위에 표현을 사용함*/
+    background-color: rgba(255, 255, 255, 0.8);
     height: 40px;
-    
-    box-shadow: 0 0.5px rgb(155, 155, 155);
+    width: 100%;
+    box-shadow: 0 0.6px rgb(155, 155, 155);
+    position: fixed;
+    top: -1px;
 }
 
 .mainBar {
@@ -41,12 +44,13 @@ body{
     color: black;
 }
 
-
+/* 로고 */
 #logo{
     position: relative;
-    margin: 1px auto;
+    margin: 20px auto;
+    top: 15px;
     height: 150px;
-    box-shadow: 0 0.5px rgb(155, 155, 155);
+    box-shadow: 0 0.6px rgb(155, 155, 155);
     border: 1px solid white; /* 이게 있어야지만 칸 사이즈가 고정되는데 왜 ?*/
 }
 .logoimg {
@@ -70,11 +74,23 @@ body{
     top: 3px;
 }
 
+/* 로고아래 메뉴바 */
 #menuBar { 
+    /* position: relative; */
+    z-index : 2;
     margin: 0 auto;
-    background-color: rgb(255,255,255);
+    background-color: rgba(255, 255, 255, 0.8);
+    top: 40px;
     height: 40px;
     box-shadow: 0 0.5px rgb(155, 155, 155);
+    /* transition: 0s ease-out; */
+}
+
+.fixed-menu {
+    position: fixed;
+    top: 30px;
+    width: 100%;
+    height: 50px;
 }
 
 .innerBox{ 
@@ -93,6 +109,53 @@ body{
     color: black;
 }
 
+/* 메뉴바 마우스 올릴때 동작 */
+.all{
+    position : relative;
+    display : inline-block;
+    }
+
+.all-content{
+    /* display : none; */
+    position : absolute;
+    left: -0px;
+    top: 40px;
+    width: 1180px;
+    z-index : 1; /*다른 요소들보다 앞에 배치*/
+    font-size: small;
+    background-color: white;
+    border: 1px solid rgb(155, 155, 155);
+    padding: 2px 5px !important;
+}
+.all-content div{
+    margin: 0 auto !important;
+}
+.all-content a{
+    display : block;
+    text-decoration : none;
+    color : rgb(37, 37, 37);
+    font-size: 12px;
+    min-width : 100px;
+    margin: 5px 10px;
+    padding: 8px;
+}
+
+
+.all-content a:hover{
+    background-color: rgb(155, 155, 155);
+    color: white;
+    border-radius: 3px;
+}
+
+.all:hover .all-content {
+    display: block;
+}
+
+.all:hover{
+    background-color: rgb(155, 155, 155);
+}
+
+
 .top{
     position : relative;
     display : inline-block;
@@ -101,10 +164,27 @@ body{
 .top-content{
     display : none;
     position : absolute;
+    left: -7px;
+    top: 37px;
     z-index : 1; /*다른 요소들보다 앞에 배치*/
     font-size: x-large;
     background-color: white;
     border: 1px solid rgb(155, 155, 155);
+    padding: 2px 5px !important;
+}
+.top-content::after{
+    width: 8px;
+    height: 8px;
+    border-left: 1px solid rgb(155, 155, 155);
+    border-top: 1px solid rgb(155, 155, 155);
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    background-color: white;
+    transform: rotate(45deg);
+    content:"";
+    position:absolute;
+    top:-4px;
+    left:66px;
 }
 
 .top-content a{
@@ -112,14 +192,231 @@ body{
     text-decoration : none;
     color : rgb(37, 37, 37);
     font-size: 12px;
-    padding : 12px 20px;
-    min-width : 200px;
+    min-width : 100px;
+    margin: 5px 10px;
+    padding: 8px;
 }
 
+
 .top-content a:hover{
-    background-color: white;
+    background-color: rgb(155, 155, 155);
+    color: white;
+    border-radius: 3px;
 }
 
 .top:hover .top-content {
     display: block;
+}
+
+
+.bottom{
+    position : relative;
+    display : inline-block;
+    }
+
+.bottom-content{
+    display : none;
+    position : absolute;
+    left: 7px;
+    top: 37px;
+    z-index : 1; /*다른 요소들보다 앞에 배치*/
+    font-size: x-large;
+    background-color: white;
+    border: 1px solid rgb(155, 155, 155);
+    padding: 2px 5px !important;
+}
+.bottom-content::after{
+    width: 8px;
+    height: 8px;
+    border-left: 1px solid rgb(155, 155, 155);
+    border-top: 1px solid rgb(155, 155, 155);
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    background-color: white;
+    transform: rotate(45deg);
+    content:"";
+    position:absolute;
+    top:-4px;
+    left:66px;
+}
+
+.bottom-content a{
+    display : block;
+    text-decoration : none;
+    color : rgb(37, 37, 37);
+    font-size: 12px;
+    min-width : 100px;
+    margin: 5px 10px;
+    padding: 8px;
+}
+
+.bottom-content a:hover{
+    background-color: rgb(155, 155, 155);
+    color: white;
+    border-radius: 3px;
+}
+
+.bottom:hover .bottom-content {
+    display: block;
+}
+
+
+.outer{
+    position : relative;
+    display : inline-block;
+    }
+
+.outer-content{
+    display : none;
+    position : absolute;
+    left: 1px;
+    top: 37px;
+    z-index : 1; /*다른 요소들보다 앞에 배치*/
+    font-size: x-large;
+    background-color: white;
+    border: 1px solid rgb(155, 155, 155);
+    padding: 2px 5px !important;
+}
+.outer-content::after{
+    width: 8px;
+    height: 8px;
+    border-left: 1px solid rgb(155, 155, 155);
+    border-top: 1px solid rgb(155, 155, 155);
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    background-color: white;
+    transform: rotate(45deg);
+    content:"";
+    position:absolute;
+    top:-4px;
+    left:66px;
+}
+
+.outer-content a{
+    display : block;
+    text-decoration : none;
+    color : rgb(37, 37, 37);
+    font-size: 12px;
+    min-width : 100px;
+    margin: 5px 10px;
+    padding: 8px;
+}
+
+.outer-content a:hover{
+    background-color: rgb(155, 155, 155);
+    color: white;
+    border-radius: 3px;
+}
+
+.outer:hover .outer-content {
+    display: block;
+}
+
+
+.skirt{
+    position : relative;
+    display : inline-block;
+    }
+
+.skirt-content{
+    display : none;
+    position : absolute;
+    left: 10px;
+    top: 37px;
+    z-index : 1; /*다른 요소들보다 앞에 배치*/
+    font-size: x-large;
+    background-color: white;
+    border: 1px solid rgb(155, 155, 155);
+    padding: 2px 5px !important;
+}
+.skirt-content::after{
+    width: 8px;
+    height: 8px;
+    border-left: 1px solid rgb(155, 155, 155);
+    border-top: 1px solid rgb(155, 155, 155);
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    background-color: white;
+    transform: rotate(45deg);
+    content:"";
+    position:absolute;
+    top:-4px;
+    left:66px;
+}
+
+.skirt-content a{
+    display : block;
+    text-decoration : none;
+    color : rgb(37, 37, 37);
+    font-size: 12px;
+    min-width : 100px;
+    margin: 5px 10px;
+    padding: 8px;
+}
+
+.skirt-content a:hover{
+    background-color: rgb(155, 155, 155);
+    color: white;
+    border-radius: 3px;
+}
+
+.skirt:hover .skirt-content {
+    display: block;
+}
+
+.acc{
+    position : relative;
+    display : inline-block;
+    }
+
+.acc-content{
+    display : none;
+    position : absolute;
+    left: -6px;
+    top: 37px;
+    z-index : 1; /*다른 요소들보다 앞에 배치*/
+    font-size: x-large;
+    background-color: white;
+    border: 1px solid rgb(155, 155, 155);
+    padding: 2px 5px !important;
+}
+.acc-content::after{
+    width: 8px;
+    height: 8px;
+    border-left: 1px solid rgb(155, 155, 155);
+    border-top: 1px solid rgb(155, 155, 155);
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    background-color: white;
+    transform: rotate(45deg);
+    content:"";
+    position:absolute;
+    top:-4px;
+    left:66px;
+}
+
+.acc-content a{
+    display : block;
+    text-decoration : none;
+    color : rgb(37, 37, 37);
+    font-size: 12px;
+    min-width : 100px;
+    margin: 5px 10px;
+    padding: 8px;
+}
+
+.acc-content a:hover{
+    background-color: rgb(155, 155, 155);
+    color: white;
+    border-radius: 3px;
+}
+
+.acc:hover .acc-content {
+    display: block;
+}
+
+/* 메인노출 이미지 */
+#imgBox{
+    position: relative;
+    top: 1px;
 }
