--- a/basketInfoBox.css
+++ b/basketInfoBox.css
@@ -1,10 +1,10 @@
 /* 회원 정보 박스 */
 
 .info-box {
-  border-color: rgb(255, 102, 0);
   border-style: solid;
   border-width: 1px;
   background-color: #fafafa;
+  border-color: #e7e7e7;
 }
 
 .information {
