--- a/orderListContainer.css
+++ b/orderListContainer.css
@@ -20,15 +20,12 @@ a {
 #contents {
   width: 1100px;
   margin: 5px auto 50px;
-  border-color: red;
-  border-style: solid;
-  border-width: 1px;
+  /* border-style: solid;
+  border-width: 1px; */
 }
 
 .location-subpage {
-  border-color: blue;
-  border-style: solid;
-  border-width: 1px;
+  border: none;
 }
 .path-subpage {
   line-height: 30px;
@@ -59,9 +56,7 @@ a {
 
 .title-subpage {
   margin: 0 0 20px;
-  border-color: rgb(0, 255, 149);
-  border-style: solid;
-  border-width: 1px;
+  border: none;
 }
 
 .title-subpage h2 {
