--- a/basket/basketContainer.css
+++ b/basket/basketContainer.css
@@ -61,6 +61,7 @@ a {
 .title-subpage h2 {
   /*CART*/
   margin-top: 20px; /*CART만 아래로*/
+  padding-top: 18px;
   color: #2e2e2e;
   font-size: 16px;
   font-weight: bold;
