--- a/orderList/orderListContainer.css
+++ b/orderList/orderListContainer.css
@@ -62,6 +62,7 @@ a {
 .title-subpage h2 {
   /*ORDER DETAILS*/
   margin-top: 20px; /*CART만 아래로*/
+  padding-top: 18px;
   color: #2e2e2e;
   font-size: 16px;
   font-weight: bold;
