--- a/orderList/orderListPeriod.css
+++ b/orderList/orderListPeriod.css
@@ -105,6 +105,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: #404040;
   width: 45px;
   height: 24px;
+  cursor: pointer;
 }
 
 .order-helpText ul {
